--- a/index.html
+++ b/index.html
@@ -20,6 +20,69 @@
 
     <!-- Welcome Screen -->
     <div id="welcomeScreen" class="screen active animate__animated animate__fadeIn">
+        </div>
+
+    <!-- Terms Screen -->
+    <div id="termsScreen" class="screen">
+        <!-- Content... -->
+    </div>
+
+    <!-- Registration Form -->
+    <div id="registrationScreen" class="screen">
+        <!-- Content... -->
+    </div>
+
+    <!-- Exam Selection Screen -->
+    <div id="examSelectionScreen" class="screen">
+        <!-- Content... -->
+    </div>
+
+    <!-- Exam Screen -->
+    <div id="examScreen" class="screen">
+        <!-- Content... -->
+    </div>
+
+    <!-- Results Screen -->
+    <div id="resultsScreen" class="screen">
+        <!-- Content... -->
+    </div>
+
+    <!-- Floating Buttons -->
+    <div class="floating-buttons">
+        <!-- Buttons... -->
+    </div>
+
+    <!-- Admin Panels -->
+    <div id="adminPanel" class="admin-overlay">
+        <!-- Content... -->
+    </div>
+
+    <!-- Bank Soal Panel -->
+    <div id="bankSoalPanel" class="admin-overlay">
+        <!-- Content... -->
+    </div>
+
+    <!-- Go To Panel -->
+    <div id="goToPanel" class="floating-panel">
+        <!-- Content... -->
+    </div>
+
+    <!-- Share Panel -->
+    <div id="sharePanel" class="floating-panel">
+        <!-- Content... -->
+    </div>
+
+    <!-- Audio Play Button -->
+    <button id="audioPlayBtn" style="display:none;" class="btn-primary floating-btn">
+        <i class="fas fa-play"></i>
+    </button>
+
+    <!-- Volume Control -->
+    <div id="volumeControl">
+        <button id="muteBtn" class="floating-btn" title="Mute/Unmute"><i class="fas fa-volume-up"></i></button>
+        <input type="range" id="volumeSlider" min="0" max="1" step="0.1" value="0.7" style="display:none;">
+    </div>
+        
         <div class="welcome-container">
             <img src="assets/images/logo.png" alt="PERGUNU Logo" class="logo animate__animated animate__bounceIn">
             <h1 class="animate__animated animate__fadeInUp">PERGUNU SMART</h1>
