--- a/index.html
+++ b/index.html
@@ -938,5 +938,6 @@
     <script src="js/exam-logic.js"></script>
     <script src="js/admin-panel.js"></script>
     <script src="js/certificate-generator.js"></script>
+    <script src="js/particles.js"></script>
 </body>
 </html>
