--- a/index.html
+++ b/index.html
@@ -397,26 +397,37 @@
     </div>
 
     <!-- Floating Buttons -->
-    <div class="floating-buttons">
-        <button class="floating-btn" id="share-btn" title="Bagikan Website">
-            <i class="fas fa-share-alt"></i>
-        </button>
-        <button class="floating-btn" id="whatsapp-btn" title="Chat WhatsApp Admin">
-            <i class="fab fa-whatsapp"></i>
-        </button>
-        <button class="floating-btn" id="links-btn" title="Daftar Link">
-            <i class="fas fa-link"></i>
-        </button>
-        <button class="floating-btn" id="question-bank-btn" title="Bank Soal">
-            <i class="fas fa-book"></i>
-        </button>
-        <button class="floating-btn" id="admin-panel-btn" title="Panel Admin">
-            <i class="fas fa-cog"></i>
-        </button>
-        <button class="floating-btn" id="music-btn" title="Musik Latar">
-            <i class="fas fa-music"></i>
-        </button>
-    </div>
+    // Perbaikan tombol melayang
+    const floatingButtons = {
+        'share-btn': 'share-modal',
+        'whatsapp-btn': 'whatsapp-modal',
+        'links-btn': 'links-modal',
+        'question-bank-btn': 'question-bank-modal',
+        'admin-panel-btn': 'admin-panel-modal'
+    };
+
+    for (const [btnId, modalId] of Object.entries(floatingButtons)) {
+        const btn = document.getElementById(btnId);
+        if (btn) {
+            btn.addEventListener('click', function() {
+                const modal = document.getElementById(modalId);
+                if (modal) {
+                    modal.classList.add('active');
+                }
+            });
+        }
+    }
+
+    // Perbaikan untuk tombol musik
+    const musicBtn = document.getElementById('music-btn');
+    if (musicBtn) {
+        musicBtn.addEventListener('click', function() {
+            const musicPlayer = document.getElementById('music-player');
+            if (musicPlayer) {
+                musicPlayer.classList.toggle('hidden');
+            }
+        });
+    }
 
     <!-- Music Player -->
     <div class="music-player" id="music-player">
