--- a/index.html
+++ b/index.html
@@ -932,11 +932,8 @@
         </div>
     </div>
 
-    <script src="js/particles.js"></script>
+    <script src="js/particles.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/form-validation.js"></script>
-    <script src="js/exam-logic.js"></script>
-    <script src="js/admin-panel.js"></script>
-    <script src="js/certificate-generator.js"></script>
 </body>
 </html>
