--- a/index.html
+++ b/index.html
@@ -1910,6 +1910,12 @@
                 const initialQuestions = {
                     'TES_IQ': [
                         {
+                            question: "Apa angka berikutnya dalam deret ini: 2...?",
+                            options: ["A. 24", "B. 3", "C. 64", "D. 128", "E. 256"],
+                            correctAnswer: 1, // Index of correct answer (0-based)
+                            explanation: "Deret ini adalah kelipatan 2 (2^n), sehingga angka berikutnya adalah 3."
+                        },
+                        {
                             question: "Apa angka berikutnya dalam deret ini: 2, 4, 8, 16, ...?",
                             options: ["A. 24", "B. 32", "C. 64", "D. 128", "E. 256"],
                             correctAnswer: 1, // Index of correct answer (0-based)
