--- a/index.html
+++ b/index.html
@@ -163,12 +163,12 @@
         }
 
         .btn-warning {
-            background: linear-gradient(to right, var(--color-warning), #f39c12);
+            background: linear-gradient(to right, var(--color-warning), #f39c12;
             box-shadow: 0 4px 15px rgba(255, 152, 0, 0.3);
         }
 
         .btn-info {
-            background: linear-gradient(to right, var(--color-info), #3498db);
+            background: linear-gradient(to right, var(--color-info), #3498db;
             box-shadow: 0 4px 15px rgba(33, 150, 243, 0.3);
         }
 
