--- a/index.html
+++ b/index.html
@@ -2578,7 +2578,7 @@
                     <div class="certificate-footer">
                         <p>Ditetapkan di: Situbondo, ${now.toLocaleDateString('id-ID', { day: 'numeric', month: 'long', year: 'numeric' })}</p>
                         <div class="certificate-signature">
-                            <p>Ketua PERGUNUSMART</p>
+                            <p>Ketua PERGUNU</p>
                             <p><strong>${adminSettings.chairmanName}</strong></p>
                         </div>
                         <img src="https://raw.githubusercontent.com/pergunu/pergunusmart/main/assets/images/BARCODE.png" alt="Barcode" class="certificate-barcode">
