--- a/index.html
+++ b/index.html
@@ -1482,7 +1482,7 @@
     </div>
 
     <!-- Audio Elements -->
-    <audio id="audio-opening" src="https://github.com/pergunu/pergunusmart/blob/main/assets/audio/opening.mp3?raw=true" preload="auto"></audio>
+    <audio id="audio-opening" src="https://voca.ro/1a8eWbggFzfB" preload="auto"></audio>
     <audio id="audio-button-click" src="https://voca.ro/16oVT0NTCKF0" preload="auto"></audio>
     <audio id="audio-correct" src="https://voca.ro/1emZhDVU89XS" preload="auto"></audio>
     <audio id="audio-wrong" src="https://voca.ro/17HW0ShxqM9B" preload="auto"></audio>
@@ -1592,6 +1592,66 @@
                     options: ["A. Pembukaan UUD 1945", "B. Batang Tubuh UUD 1945", "C. Penjelasan UUD 1945", "D. Dekrit Presiden", "E. Ketetapan MPR"],
                     correctAnswer: 0,
                     explanation: "Pancasila sebagai dasar negara tercantum dalam alinea keempat Pembukaan UUD 1945."
+                },
+                {
+                    question: "Yang termasuk nilai-nilai Pancasila sila pertama adalah?",
+                    options: ["A. Toleransi antar umat beragama", "B. Gotong royong", "C. Musyawarah mufakat", "D. Keadilan sosial", "E. Persatuan Indonesia"],
+                    correctAnswer: 0,
+                    explanation: "Toleransi antar umat beragama merupakan nilai dari sila pertama Pancasila."
+                },
+                {
+                    question: "Bentuk pemerintahan Indonesia menurut UUD 1945 adalah?",
+                    options: ["A. Republik", "B. Monarki", "C. Kesultanan", "D. Kekaisaran", "E. Federasi"],
+                    correctAnswer: 0,
+                    explanation: "Bentuk pemerintahan Indonesia adalah republik sebagaimana tercantum dalam Pembukaan UUD 1945."
+                },
+                {
+                    question: "Lembaga yang berwenang mengubah UUD 1945 adalah?",
+                    options: ["A. MPR", "B. DPR", "C. Presiden", "D. MK", "E. MA"],
+                    correctAnswer: 0,
+                    explanation: "MPR adalah lembaga yang berwenang mengubah UUD 1945 menurut Pasal 3 UUD 1945."
+                },
+                {
+                    question: "Hak DPR untuk meminta keterangan kepada pemerintah disebut?",
+                    options: ["A. Hak interpelasi", "B. Hak angket", "C. Hak budget", "D. Hak inisiatif", "E. Hak amandemen"],
+                    correctAnswer: 0,
+                    explanation: "Hak interpelasi adalah hak DPR untuk meminta keterangan kepada pemerintah."
+                },
+                {
+                    question: "Lembaga negara yang berwenang menguji undang-undang terhadap UUD 1945 adalah?",
+                    options: ["A. Mahkamah Konstitusi", "B. Mahkamah Agung", "C. Komisi Yudisial", "D. DPR", "E. MPR"],
+                    correctAnswer: 0,
+                    explanation: "Mahkamah Konstitusi berwenang menguji undang-undang terhadap UUD 1945."
+                },
+                {
+                    question: "Yang termasuk nilai-nilai Pancasila sila kedua adalah?",
+                    options: ["A. Mengakui persamaan derajat", "B. Toleransi beragama", "C. Musyawarah mufakat", "D. Keadilan sosial", "E. Persatuan Indonesia"],
+                    correctAnswer: 0,
+                    explanation: "Mengakui persamaan derajat merupakan nilai dari sila kedua Pancasila."
+                },
+                {
+                    question: "Sistem ekonomi Indonesia berdasarkan pada?",
+                    options: ["A. Pasal 33 UUD 1945", "B. Pasal 27 UUD 1945", "C. Pasal 28 UUD 1945", "D. Pasal 29 UUD 1945", "E. Pasal 30 UUD 1945"],
+                    correctAnswer: 0,
+                    explanation: "Sistem ekonomi Indonesia diatur dalam Pasal 33 UUD 1945."
+                },
+                {
+                    question: "Lembaga negara yang bertugas memeriksa pengelolaan keuangan negara adalah?",
+                    options: ["A. BPK", "B. KPK", "C. KY", "D. DPR", "E. MK"],
+                    correctAnswer: 0,
+                    explanation: "BPK (Badan Pemeriksa Keuangan) bertugas memeriksa pengelolaan keuangan negara."
+                },
+                {
+                    question: "Yang termasuk nilai-nilai Pancasila sila ketiga adalah?",
+                    options: ["A. Cinta tanah air", "B. Toleransi beragama", "C. Musyawarah mufakat", "D. Keadilan sosial", "E. Mengakui persamaan derajat"],
+                    correctAnswer: 0,
+                    explanation: "Cinta tanah air merupakan nilai dari sila ketiga Pancasila."
+                },
+                {
+                    question: "Lembaga yang berwenang mengadili pada tingkat kasasi adalah?",
+                    options: ["A. Mahkamah Agung", "B. Mahkamah Konstitusi", "C. Pengadilan Negeri", "D. Pengadilan Tinggi", "E. Komisi Yudisial"],
+                    correctAnswer: 0,
+                    explanation: "Mahkamah Agung berwenang mengadili pada tingkat kasasi."
                 }
             ];
             
