--- a/index.html
+++ b/index.html
@@ -1522,7 +1522,7 @@
             cpnsLicenseCode: DEFAULT_CPNS_LICENSE_CODE,
             adminPanelCode: DEFAULT_ADMIN_PANEL_CODE,
             examDuration: 120,
-            questionCount: 30,
+            questionCount: 100,
             randomizeQuestions: true,
             greetingMessage: "Selamat datang di sistem ujian online CPNS/P3K. Silakan masukkan kode login untuk melanjutkan.",
             adminMessage: "Tidak ada informasi terbaru saat ini.",
@@ -2728,6 +2728,258 @@
             ],
             correctAnswer: 3,
             explanation: "Pelayanan transportasi publik meliputi: angkutan umum dan terminal. Halte merupakan bagian dari fasilitas pendukung."
+        },
+                {
+            question: "Menurut Undang-Undang Nomor 23 Tahun 2014, dalam hal terjadi kekosongan jabatan kepala daerah, pelaksana tugas kepala daerah dijabat oleh...",
+            options: [
+                "A. Wakil kepala daerah",
+                "B. Sekretaris daerah",
+                "C. Ketua DPRD",
+                "D. Pejabat tinggi daerah",
+                "E. Staf ahli kepala daerah"
+            ],
+            correctAnswer: 1,
+            explanation: "Sekretaris daerah bertindak sebagai pelaksana tugas kepala daerah apabila terjadi kekosongan jabatan, sampai dengan terpilihnya kepala daerah definitif."
+        },
+        {
+            question: "Dalam penyusunan peraturan daerah, tahapan pembahasan bersama antara DPRD dan kepala daerah disebut...",
+            options: [
+                "A. Pembicaraan pendahuluan",
+                "B. Penyusunan rancangan",
+                "C. Pembahasan",
+                "D. Harmonisasi",
+                "E. Sosialisasi"
+            ],
+            correctAnswer: 2,
+            explanation: "Tahap pembahasan adalah proses bersama antara DPRD dan kepala daerah untuk membahas rancangan peraturan daerah sebelum ditetapkan."
+        },
+        {
+            question: "Menurut Peraturan Pemerintah Nomor 18 Tahun 2016, perangkat daerah yang bertugas melaksanakan urusan tertentu untuk mendukung tugas kepala daerah dalam penyusunan dan pelaksanaan kebijakan daerah adalah...",
+            options: [
+                "A. Dinas daerah",
+                "B. Badan",
+                "C. Kantor",
+                "D. Sekretariat DPRD",
+                "E. Inspektorat"
+            ],
+            correctAnswer: 1,
+            explanation: "Badan adalah perangkat daerah yang melaksanakan urusan tertentu untuk mendukung tugas kepala daerah dalam penyusunan dan pelaksanaan kebijakan daerah."
+        },
+        {
+            question: "Dalam sistem pemerintahan daerah, dokumen perencanaan pembangunan yang memuat visi, misi, dan program kepala daerah selama masa jabatannya adalah...",
+            options: [
+                "A. RPJPD",
+                "B. RPJMD",
+                "C. RKPD",
+                "D. Renstra SKPD",
+                "E. Renja SKPD"
+            ],
+            correctAnswer: 1,
+            explanation: "RPJMD (Rencana Pembangunan Jangka Menengah Daerah) memuat visi, misi, program, dan kebijakan kepala daerah selama masa jabatan 5 tahun."
+
+        },
+
+        // Kepegawaian (4 soal tambahan)
+        {
+            question: "Menurut Peraturan Pemerintah Nomor 11 Tahun 2017, masa kerja minimal yang diperlukan untuk kenaikan pangkat reguler PNS adalah...",
+            options: [
+                "A. 2 tahun",
+                "B. 3 tahun",
+                "C. 4 tahun",
+                "D. 5 tahun",
+                "E. 6 tahun"
+            ],
+            correctAnswer: 2,
+            explanation: "Masa kerja minimal untuk kenaikan pangkat reguler PNS adalah 4 (empat) tahun dalam pangkat terakhir."
+        },
+        {
+            question: "Dalam sistem penilaian kinerja PNS, instrumen yang digunakan untuk mencatat capaian kinerja adalah...",
+            options: [
+                "A. DP3",
+                "B. SKP",
+                "C. LHKPN",
+                "D. LHKASN",
+                "E. PKB"
+            ],
+            correctAnswer: 1,
+            explanation: "SKP (Sasaran Kinerja Pegawai) adalah instrumen untuk mencatat capaian kinerja PNS dalam periode penilaian tertentu."
+        },
+        {
+            question: "Menurut Peraturan Pemerintah Nomor 17 Tahun 2020, cuti yang dapat diberikan kepada PNS karena alasan penting seperti menikah atau anggota keluarga meninggal adalah...",
+            options: [
+                "A. Cuti tahunan",
+                "B. Cuti sakit",
+                "C. Cuti besar",
+                "D. Cuti karena alasan penting",
+                "E. Cuti di luar tanggungan negara"
+            ],
+            correctAnswer: 3,
+            explanation: "Cuti karena alasan penting diberikan untuk keperluan seperti menikah, anggota keluarga meninggal, atau keperluan penting lainnya."
+        },
+        {
+            question: "Dalam sistem pengembangan kompetensi ASN, kegiatan yang bertujuan meningkatkan pengetahuan, keterampilan, dan sikap untuk pengembangan karier adalah...",
+            options: [
+                "A. Diklat prajabatan",
+                "B. Diklat kepemimpinan",
+                "C. Diklat teknis",
+                "D. Diklat fungsional",
+                "E. Seminar dan workshop"
+            ],
+            correctAnswer: 1,
+            explanation: "Diklat kepemimpinan ditujukan untuk pengembangan karier ASN ke jenjang kepemimpinan yang lebih tinggi."
+
+        },
+
+        // Keuangan Daerah (4 soal tambahan)
+        {
+            question: "Menurut Peraturan Pemerintah Nomor 12 Tahun 2019, dokumen yang memuat informasi realisasi pendapatan dan belanja daerah selama satu tahun anggaran adalah...",
+            options: [
+                "A. Laporan Realisasi Anggaran",
+                "B. Neraca",
+                "C. Laporan Arus Kas",
+                "D. Catatan atas Laporan Keuangan",
+                "E. Laporan Operasional"
+            ],
+            correctAnswer: 0,
+            explanation: "Laporan Realisasi Anggaran (LRA) menyajikan informasi realisasi pendapatan dan belanja daerah selama satu tahun anggaran."
+        },
+        {
+            question: "Dalam sistem pengelolaan keuangan daerah, dokumen yang menjadi dasar pelaksanaan anggaran satuan kerja perangkat daerah adalah...",
+            options: [
+                "A. APBD",
+                "B. RKA-SKPD",
+                "C. DPA-SKPD",
+                "D. RKPD",
+                "E. Renja SKPD"
+            ],
+            correctAnswer: 2,
+            explanation: "DPA-SKPD (Dokumen Pelaksanaan Anggaran Satuan Kerja Perangkat Daerah) menjadi dasar pelaksanaan anggaran bagi SKPD."
+        },
+        {
+            question: "Menurut Peraturan Menteri Dalam Negeri Nomor 32 Tahun 2011, batas waktu penyampaian rancangan peraturan daerah tentang pertanggungjawaban pelaksanaan APBD adalah...",
+            options: [
+                "A. 3 bulan setelah tahun anggaran berakhir",
+                "B. 6 bulan setelah tahun anggaran berakhir",
+                "C. 9 bulan setelah tahun anggaran berakhir",
+                "D. 12 bulan setelah tahun anggaran berakhir",
+                "E. 18 bulan setelah tahun anggaran berakhir"
+            ],
+            correctAnswer: 1,
+            explanation: "Rancangan peraturan daerah tentang pertanggungjawaban pelaksanaan APBD harus disampaikan paling lambat 6 bulan setelah tahun anggaran berakhir."
+        },
+        {
+            question: "Dalam sistem pengadaan barang/jasa pemerintah, metode pemilihan penyedia barang/jasa yang dilakukan melalui undian adalah...",
+            options: [
+                "A. Pelelangan",
+                "B. Seleksi",
+                "C. Penunjukan langsung",
+                "D. Swakelola",
+                "E. E-purchasing"
+            ],
+            correctAnswer: 1,
+            explanation: "Seleksi adalah metode pemilihan penyedia barang/jasa melalui undian setelah memenuhi persyaratan administrasi, teknis, dan harga."
+
+        },
+
+        // Aset Daerah (4 soal tambahan)
+        {
+            question: "Menurut Peraturan Pemerintah Nomor 27 Tahun 2014, penilaian barang milik daerah yang dilakukan oleh pihak independen yang memiliki sertifikat kompetensi disebut...",
+            options: [
+                "A. Penilaian internal",
+                "B. Penilaian eksternal",
+                "C. Penilaian independen",
+                "D. Penilaian oleh tim ahli",
+                "E. Penilaian oleh konsultan"
+            ],
+            correctAnswer: 2,
+            explanation: "Penilaian independen dilakukan oleh penilai independen yang memiliki sertifikat kompetensi penilaian."
+        },
+        {
+            question: "Dalam sistem penghapusan barang milik daerah, tim penghapusan barang milik daerah dibentuk oleh...",
+            options: [
+                "A. Kepala daerah",
+                "B. Sekretaris daerah",
+                "C. Kepala Dinas Pengelola Keuangan dan Aset Daerah",
+                "D. Inspektorat daerah",
+                "E. DPRD"
+            ],
+            correctAnswer: 0,
+            explanation: "Tim penghapusan barang milik daerah dibentuk dengan keputusan kepala daerah untuk melakukan verifikasi dan memberikan rekomendasi penghapusan."
+        },
+        {
+            question: "Menurut Peraturan Menteri Dalam Negeri Nomor 19 Tahun 2016, pencatatan barang milik daerah dalam Buku Induk Barang dilakukan berdasarkan...",
+            options: [
+                "A. Jenis barang",
+                "B. Lokasi barang",
+                "C. Satuan kerja pengguna",
+                "D. Nilai ekonomis barang",
+                "E. Masa pakai barang"
+            ],
+            correctAnswer: 0,
+            explanation: "Pencatatan dalam Buku Induk Barang dilakukan berdasarkan klasifikasi dan kode barang sesuai jenisnya."
+        },
+        {
+            question: "Dalam sistem pemanfaatan barang milik daerah, kerjasama pemanfaatan dengan pihak ketiga harus memenuhi prinsip...",
+            options: [
+                "A. Tidak merugikan kepentingan umum",
+                "B. Memberikan keuntungan finansial",
+                "C. Mendapat persetujuan DPRD",
+                "D. Dilakukan melalui tender",
+                "E. Bersifat sementara"
+            ],
+            correctAnswer: 0,
+            explanation: "Kerjasama pemanfaatan harus memenuhi prinsip tidak merugikan kepentingan umum dan sesuai ketentuan peraturan perundang-undangan."
+
+        },
+
+        // Layanan Operasional dan Teknis (4 soal tambahan)
+        {
+            question: "Menurut Peraturan Menteri PANRB Nomor 36 Tahun 2012, standar pelayanan publik harus memuat informasi tentang...",
+            options: [
+                "A. Dasar hukum pelayanan",
+                "B. Persyaratan teknis dan administratif",
+                "C. Prosedur dan biaya pelayanan",
+                "D. Hak dan kewajiban pengguna layanan",
+                "E. Semua jawaban benar"
+            ],
+            correctAnswer: 4,
+            explanation: "Standar pelayanan publik harus memuat semua informasi tersebut sebagai bentuk transparansi dan akuntabilitas."
+        },
+        {
+            question: "Dalam sistem pelayanan terpadu satu pintu (PTSP), fungsi koordinasi dan sinkronisasi lintas sektor dilakukan oleh...",
+            options: [
+                "A. Kepala daerah",
+                "B. Sekretaris daerah",
+                "C. Kepala Dinas Penanaman Modal dan PTSP",
+                "D. Tim koordinasi PTSP",
+                "E. Semua instansi terkait"
+            ],
+            correctAnswer: 3,
+            explanation: "Tim koordinasi PTSP bertugas melakukan koordinasi dan sinkronisasi lintas sektor dalam penyelenggaraan PTSP."
+        },
+        {
+            question: "Menurut Peraturan Pemerintah Nomor 96 Tahun 2012, mekanisme pengaduan masyarakat terhadap pelayanan publik dapat disampaikan melalui...",
+            options: [
+                "A. Lembaga Ombudsman",
+                "B. Unit pengaduan instansi penyelenggara",
+                "C. Media massa",
+                "D. Aplikasi pengaduan online",
+                "E. Semua jawaban benar"
+            ],
+            correctAnswer: 4,
+            explanation: "Pengaduan dapat disampaikan melalui berbagai saluran resmi termasuk Ombudsman, unit pengaduan instansi, atau saluran online."
+        },
+        {
+            question: "Dalam sistem penilaian kinerja unit pelayanan publik, indikator yang mengukur kesesuaian antara hasil dengan target yang ditetapkan disebut...",
+            options: [
+                "A. Indikator input",
+                "B. Indikator output",
+                "C. Indikator outcome",
+                "D. Indikator benefit",
+                "E. Indikator impact"
+            ],
+            correctAnswer: 1,
+            explanation: "Indikator output mengukur kesesuaian antara hasil langsung kegiatan dengan target yang ditetapkan."
         },
         {
             question: "Menurut Peraturan Menteri Perhubungan Nomor 35 Tahun 2015 tentang Penyelenggaraan Angkutan Orang di Jalan dengan Kendaraan Umum, prinsip penyelenggaraan angkutan umum meliputi...",
